Downgrade target Java version to Java 8